--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,18 @@ body {
     margin: 0 auto;
 }
 
+.panel-auth {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.alert-auth {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* Classes */
 .pull-left {
   float: left !important;
